--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -1,8 +1,18 @@
-name: Check Docker Version
-on: push
+name: Simple CI/CD Pipeline
+on: [push]
 jobs:
-  check-docker:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Show Docker Version
-        run: docker --version
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to DockerHub
+        run: echo "1qaz@WSX" | docker login -u "avikatz10" --password-stdin
+
+      - name: Build and tag Docker image
+        run: docker build -t avikatz10/nodejs-app:latest .
+
+      - name: Push Docker image to DockerHub
+        run: docker push avikatz10/nodejs-app:latest
+
