--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to DockerHub
-        run: echo "1qaz@WSX" | docker login -u "avikatz10" --password-stdin
+        run: echo "Avi@3717!" | docker login -u "avikatz10" --password-stdin
 
       - name: Build and tag Docker image
         run: docker build -t avikatz10/nodejs-app:latest .
